# nomad-distro-dev

./: .gitignore  .gitmodules  AGENTS.md  docker-compose.yaml  multi_threading_processing_test.py  nomad.yaml  pyproject.toml  testing_api.ipynb
.codex/skills/fairmat-dev/: SKILL.md
.codex/skills/fairmat-dev/references/: nomad-core-plugin-architecture.md  repo-layout.md  testing.md
.github/: copilot-instructions.md
.github/workflows/: sync-upstream.yml
run/gui/: index.html  sample.tif
run/gui/assets/: Boolean-4Uc0VIHp.js  Boolean-jjDVkWzX.js  Download-C4PQ4spF.js  Download-CO8lh_9E.js  EntryContext-DBKD7XKl.js  EntryContext-KoOxEAbS.js  EntryDataEditor-COyJzOg7.js  EntryDataEditor-Cy97jTf7.js  EntryLogs-C0lC2l1A.js  EntryLogs-n9N-_0Ow.js  EntryOverview-BXyBpc15.js  EntryOverview-BuckM86s.js  EntryPage-DUNy6tJ5.js  EntryPage-zOHeaJwI.js  EntrySection-CDujCcga.js  EntrySection-DTiBKHzX.js  ErrorBoundary-DVJerO_f.js  GroupPage-BXvgPdav.js  GroupPage-Bd0jFeo0.js  GroupsPage-CIPMVxGZ.js  GroupsPage-Cec_Ksxt.js  HDF5FileViewer-DGgWyl_8.js  HDF5FileViewer-Dc-ok-jA.css  HDF5FileViewer-Dp2bCn9Q.js  LayoutDocumentation-D1jXfELu.js  LayoutDocumentation-DAqsxjNd.js  List-C8YnYSw4.js  List-C_hbwj_D.js  NorthPage-DNindrdF.js  NorthPage-GS6L6UI0.js  SectionProvider-BGIb-Rry.js  SectionProvider-D-1iO5eX.js  SectionProvider-bPF-IFnB.css  Select-C8GMJQX4.js  UploadFiles-BVWJWZK_.js  UploadFiles-B_fGBlXL.js  UploadFilesNav-BEWablQr.js  UploadFilesNav-BqaWL1LL.js  UploadNavAbout-DrVEZFzO.js  UploadNavAbout-RIvECmq5.js  (+14 more)
run/gui/assets/@mapbox/: rehype-prism-vXukC30A.js
scripts/: add_submodule.sh  remove_submodule.sh
testing/: 1.parquet  14.cif  2.parquet  Ag_P_S_analysis.archive.json  analysis1.ipynb  archive_generator.py  consolidated.parquet  example_input.json  ml-integration-plot.ipynb  plot_data.json  pybliometrics-ml.py  read_binary.py  read_entry_archive.py  schema.archive.yaml  test.archive.yaml  test_entries_api.py  testing.ipynb  testing_api.ipynb  testing_export_entry_models.py  testing_inheritance.archive.yaml  testing_parquet_consolidation.py
testing/export_entries_2026-01-21T15-25-52.165701+00-00/: create_parquet.py  merged.json  metadata.json
testing/model_entries/: auto_xrd_model_Ag_P_S.archive.json  auto_xrd_model_Al_Cl_H_F.archive.json  auto_xrd_model_Al_Li.archive.json  auto_xrd_model_Al_Sc.archive.json  auto_xrd_model_B_Cu.archive.json  auto_xrd_model_B_H_S_Ti.archive.json  auto_xrd_model_B_O_P_H.archive.json  auto_xrd_model_B_Ti_Be_Ni.archive.json  auto_xrd_model_B_V_H.archive.json  auto_xrd_model_B_Zn_O_V.archive.json  auto_xrd_model_Be_B.archive.json  auto_xrd_model_Be_Cu.archive.json  auto_xrd_model_C_Ti_Sc_Mn.archive.json  auto_xrd_model_Cl_Be_Sc_Cr.archive.json  auto_xrd_model_Cl_Co.archive.json  auto_xrd_model_Cl_H.archive.json  auto_xrd_model_Cl_S_Cu_Zn.archive.json  auto_xrd_model_Cl_S_N_Ni.archive.json  auto_xrd_model_Co_Al_Li.archive.json  auto_xrd_model_Co_B.archive.json  auto_xrd_model_Co_B_N_Cr.archive.json  auto_xrd_model_Co_Cl.archive.json  auto_xrd_model_Co_Ti_Li.archive.json  auto_xrd_model_Cr_Sc.archive.json  auto_xrd_model_Cr_Sc_H.archive.json  auto_xrd_model_Cr_Zn_B_N.archive.json  auto_xrd_model_Cu_Fe_B.archive.json  auto_xrd_model_Cu_Ni_Zn.archive.json  auto_xrd_model_Cu_S.archive.json  auto_xrd_model_Cu_V.archive.json  auto_xrd_model_F_Al_B_N.archive.json  auto_xrd_model_F_Sc_Fe_Ti.archive.json  auto_xrd_model_F_Ti.archive.json  auto_xrd_model_Fe_Al_Cu_O.archive.json  auto_xrd_model_Fe_Be_Sc.archive.json  auto_xrd_model_Fe_Cr_Li.archive.json  auto_xrd_model_Fe_Li.archive.json  auto_xrd_model_Ga_Al_Be.archive.json  auto_xrd_model_Ga_Cr_B.archive.json  auto_xrd_model_Ga_Cu_B.archive.json  (+50 more)
