[project]
name = "nomad-development-distribution"
description = """This is a personal development distribution of NOMAD, primarily used
for developing and testing NOMAD plugins."""
version = "0.1"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "nomad-lab[parsing, infrastructure]>=1.3.10",
  "nomad-material-processing",
  "nomad-measurements",
  "nomad-analysis",
  "nomad-ikz-plugin",
  "nomad-material-processing-example",
  "nomad-auto-xrd[dev]",
  "nomad-docs",
  "crystallm",
  "pdi-nomad-plugin",
  "nomad-crystallm[gpu-workflow]",
  "scipy==1.15.3", # pinning scipy to avoid issues with statsmodels
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
nomad-lab = { workspace = true }
nomad-material-processing = { workspace = true }
nomad-measurements = { workspace = true }
nomad-analysis = { workspace = true }
nomad-ikz-plugin = { workspace = true }
nomad-material-processing-example = { workspace = true }
nomad-auto-xrd = { workspace = true }
nomad-docs = { workspace = true }
crystallm = { workspace = true }
pdi-nomad-plugin = { workspace = true }
nomad-crystallm = { workspace = true }

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
dev-dependencies = [
  "nomad-lab[parsing, infrastructure, dev]>=1.3.4",
  "poethepoet>=0.29.0",
]
constraint-dependencies = ["hyperspy>=1.7.6"]
required-version = ">=0.5.14"

[tool.poe.tasks]
submodule = "git submodule update --init --recursive"
docker = "docker compose up -d"
start = "nomad admin run appworker --dev"
setup = ["gui-env", "gui-setup", "docker", "config"]
lint = ["ruff-lint", "ruff-format"]
cleanup = ["remove-egg-info"]
temporal = ["temporal-worker"]

[tool.poe.tasks.config]
shell = """
import os;
if not os.path.exists("nomad.yaml"):
    with open("nomad.yaml", "w") as f:
        f.write("keycloak:\\n  realm_name: \\"fairdi_nomad_test\\"\\n")
"""
interpreter = "python"

[tool.poe.tasks.gui-env]
cmd = "python -W ignore -m nomad.cli dev gui-env"
capture_stdout = "packages/nomad-FAIR/gui/.env.development"

[tool.poe.tasks.docs]
cmd = "mkdocs serve"
cwd = "packages/nomad-docs"

[tool.poe.tasks.ruff-lint]
cmd = "ruff check ."

[tool.poe.tasks.ruff-format]
cmd = "ruff format . --check"

[tool.poe.tasks.hub]
cmd = "nomad admin run hub"
cwd = "packages/nomad-FAIR"

[tool.poe.tasks.gui]
cmd = "yarn run"
cwd = "packages/nomad-FAIR/gui"

[tool.poe.tasks.gui-setup]
cmd = "yarn"
cwd = "packages/nomad-FAIR/gui"

[tool.poe.tasks.gen-gui-test-env]
cmd = "python -W ignore -m nomad.cli dev gui-config"
capture_stdout = "packages/nomad-FAIR/gui/tests/env.js"
env = { NOMAD_CONFIG = "packages/nomad-FAIR/gui/tests/nomad.yaml" }

[tool.poe.tasks.gen-nomad-lock]
cmd = "uv pip compile -U --universal -p 3.11 --extra parsing --extra infrastructure --extra dev --annotation-style=line pyproject.toml requirements.txt"
capture_stdout = "packages/nomad-FAIR/requirements-dev.txt"
cwd = "packages/nomad-FAIR"
deps = ["gen-nomad-lock-without-dev"]

[tool.poe.tasks.gen-nomad-lock-without-dev]
cmd = "uv pip compile -U --universal -p 3.11 --extra parsing --extra infrastructure --annotation-style=line pyproject.toml"
cwd = "packages/nomad-FAIR"
capture_stdout = "packages/nomad-FAIR/requirements.txt"

[tool.poe.tasks.api]
cmd = "uvicorn nomad.app.main:app --reload"

[tool.poe.tasks.worker]
deps = ["nodemon"]
cmd = "nodemon -e py -x celery -A nomad.processing.app worker --loglevel=INFO -B -Q celery --concurrency=1"

[tool.poe.tasks.temporal-worker]
cmd = "uv run nomad admin run orchestrator-gpu-worker"

[tool.poe.tasks.nodemon]
shell = """
import subprocess

try:
    subprocess.run(["nodemon", "--version"], check=True, capture_output=True)
except:
    try:
        subprocess.run(["npm", "install", "-g", "nodemon"], check=True)
    except:
        print("Nodemon install failed.")
"""
interpreter = "python"

[tool.poe.tasks.remove-egg-info]
cmd = "find . -type d -name '*.egg-info' -print0 | xargs -0 rm -r"